# life-nav-mvp

./: .env.docker  .env.example  .env.supabase.prod.example  .env.vertex.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .secrets.baseline  20_USER_BETA_LAUNCH_CHECKLIST.md  20_USER_BETA_READINESS_REPORT.md  ACHIEVEMENT_SUMMARY.md  ACTION_LOOP_REFRESH_VALIDATION.md  ACTIVATION_FLOW_V3.md  ACTIVATION_RELIABILITY_REPORT.md  ACTUAL_FIXES_NEEDED.md  ADDDATA_MODAL_SWEEP_REPORT.md  ADMIN_SYSTEM_COMPLETE.md  ADVISOR_ACTION_LOOP.md  ADVISOR_BEFORE_AFTER_ANALYSIS.md  ADVISOR_BEHAVIOR_VALIDATION.md  ADVISOR_CONTEXT_ASSEMBLY_AUDIT.md  ADVISOR_CONTEXT_QUALITY_AUDIT.md  ADVISOR_EXPERIENCE_VALIDATION.md  ADVISOR_GRAPHRAG_TRACE.md  ADVISOR_HARDENING_REPORT.md  ADVISOR_INITIATIVE_AUDIT.md  ADVISOR_INTELLIGENCE_ROOT_CAUSE.md  ADVISOR_OBSERVABILITY_AUDIT.md  ADVISOR_RELEASE_HARDENING_REPORT.md  ADVISOR_REPAIR_LOOP_IMPLEMENTATION.md  AFFORDABILITY_GATE_FIX.md  AFFORDABILITY_GATE_TEST_REPORT.md  AFFORDABILITY_LIVE_REPLAY.md  AGENT_INTEGRATION_COMPLETE.md  AI_MODEL_ACTIVATION.md  ANSWER_FIRST_POLICY.md  APPLICATION_READINESS_AUDIT.md  APPROVAL_AND_CHANGE_SYSTEM.md  ARCANA_CITATION_CHIPS.md  ARCANA_CONVERSATION_VALIDATION.md  (+393 more)
apps/ingestion-worker/: .env.example  Cargo.toml  Dockerfile  INGESTION_WORKER_IMPLEMENTATION.md  RELATIONSHIP_REPROCESSING.md  deploy.sh  fly.toml
apps/ingestion-worker/src/: config.rs  entities.rs  errors.rs  gemini_client.rs  lib.rs  main.rs  neo4j_client.rs  normalizer.rs  ontology.rs  processor.rs  qdrant_client.rs  queue.rs  relationships.rs  supabase_client.rs  telemetry.rs
apps/ingestion-worker/tests/: central_routing.rs  conversation_entities.rs  decision_impact_entities.rs  decision_intelligence_entities.rs  idempotency.rs  no_sensitive_field_embedding.rs  provider_entities.rs  relationships.rs  retry_safety.rs  tenant_isolation.rs  xai_entities.rs
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  migrations-entrypoint.sh  migrations.Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 002_add_encrypted_mfa_fields.py  003_add_graphrag_index_tables.py  004_add_pilot_access_fields.py  20251105_2050_001_initial_schema.py  20251105_2051_002_domain_tables.py  20251105_2052_003_enable_rls.py  20251105_2053_004_enable_pgvector.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/clients/: graphrag.py  ln_core_client.py  neo4j_client.py  qdrant_client.py
backend/app/core/: __init__.py  celery_app.py  config.py  config_legacy.py  database.py  encryption.py  graphrag_telemetry.py  logging.py  metrics.py  multi_database.py  redis.py  security.py  telemetry.py
backend/app/middleware/: csrf.py  data_boundary.py
backend/app/models/: __init__.py  career.py  education.py  finance.py  goals.py  graphrag_index.py  health.py  integration.py  mixins.py  relationships.py  user.py
backend/app/proto/: __init__.py
backend/app/schemas/: __init__.py  auth.py  base.py  career.py  education.py  finance.py  goals.py  health.py  relationships.py  user.py  validation.py
backend/app/services/: email_service.py  embedding_service.py  entity_extraction_service.py  graphrag_index_service.py  graphrag_rebuild_service.py  key_rotation_service.py  market_context_enricher.py  ocr_service.py  risk_engine_client.py
backend/app/tasks/: graphrag_tasks.py
backend/scripts/: collect_baseline.sh  generate_proto.sh  manage_encryption.py  seed_demo_data.py  seed_demo_user.py
backend/services/agents/: DEPLOYMENT.md  Dockerfile.test  ELITE_FEATURES_ROADMAP.md  IMPLEMENTATION_PROGRESS.md  LLM_SETUP_COMPLETE.md  RUST_REFACTORING_COMPLETE.md  SESSION_COMPLETE.md  SYSTEM_READINESS_REPORT.md  benchmark_rust_graphrag.py  package.json  pyproject.toml  start_mcp_server.sh  test_incremental_graph.py  test_mmap_performance.py  test_simd_performance.py
backend/services/api/: package.json
backend/services/finance-api/: API_KEY_IMPLEMENTATION.md
backend/services/graphrag-rs/: README.md  build.rs
backend/tests/: README.md  __init__.py  conftest.py  test_csrf.py  test_emergency_access.py
backend/tests/api/: test_auth.py  test_career.py  test_education.py  test_finance.py  test_goals.py  test_health.py  test_input_validation.py  test_relationships.py
backend/tests/compliance/: __init__.py  test_hipaa_access_controls.py  test_hipaa_audit_logging.py  test_hipaa_data_security.py
backend/tests/integration/: test_graphrag.py  test_rls.py
backend/tests/load/: k6-load-test.js
life-navigator-training-rs/: .gitignore  Cargo.toml
life-navigator-training-rs/src/: graph_algorithms.rs  lib.rs  parser.rs  text_processor.rs
model-quantizer/: Cargo.toml  README.md
model-quantizer/src/: main.rs
services/agents/: .dockerignore  CURRENT_STATE.md  Dockerfile  FRONTEND_READY.md  GCP_INFRASTRUCTURE_GUIDE.md  GRAPHRAG_ARCHITECTURE.md  GRAPH_OPERATIONS_RUST_COMPLETE.md  MAVERICK_README.md  MCP_BUILD_STATUS.md  MMAP_GRAPHS_COMPLETE.md  NO_MOCK_DATA_SUMMARY.md  PROJECT_STATUS.md  QUICKREF_ADMIN_INTEGRATION.md  QUICKSTART_LLM.md  QUICK_START_CONTEXT.md  README_GUIDES.md  REAL_APP_GAP_ANALYSIS.md  RUST_API_QUICKREF.md  SESSION_2025_11_01_SUMMARY.md  SYSTEM_READY.md  TOMORROW_ACTION_PLAN.md  WEEK4_COMPLETE.md  benchmark_graph_algorithms.py  benchmark_rust_graphrag.py  chat_with_agent.py  package.json  pyproject.toml  test_database_layer.py  test_elite_features.py  test_incremental_graph.py  test_mmap_large_scale.py  test_mmap_performance.py  test_mmap_simple.py  test_simd_performance.py  test_validation.py
services/api/: .env.example  Dockerfile  generate_openapi.py  openapi.json  package.json  pyproject.toml  requirements.txt
services/embeddings/: package.json  pyproject.toml
services/graphrag-rs/: .env.example  Cargo.toml  Dockerfile  EXPLORATION_SUMMARY.md  TECHNICAL_EXPLORATION_INDEX.md  config.toml  graphrag_analysis.md  graphrag_code_examples.md  graphrag_quick_reference.md
services/kg-sync/: package.json  pyproject.toml
services/market-data/: Dockerfile  README.md  pyproject.toml
(+3832 files in other folders)
