[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-navigator-agents"
version = "0.1.0"
description = "Hierarchical multi-agent system with dual GraphRAG"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
    "pydantic>=2.9.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.8",
    "aio-pika>=9.4.3",
    "boto3>=1.35.0",
    "sentence-transformers>=3.0.1",
    "psycopg[binary]>=3.2.1",
    "pgvector>=0.3.2",
    "qdrant-client>=1.11.0",
    "neo4j>=5.24.0",
    "prometheus-client>=0.20.0",
    "cryptography>=43.0.1",
    "pyjwt>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graphrag*", "models*", "messaging*", "utils*", "api*"]
exclude = ["tests*", "docs*", "examples*", "infra*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
