[package]
name = "life-navigator-training-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "life_navigator_rs"
crate-type = ["cdylib"]  # For Python extension

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
zstd = "0.13"

# Parallel processing (NO GIL!)
rayon = "1.10"

# Fast tokenization
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }

# Fast hashing
ahash = "0.8"

# Memory-mapped files
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols

[profile.release.build-override]
opt-level = 3
