[package]
name = "model-quantizer"
version = "0.1.0"
edition = "2021"

[dependencies]
safetensors = "0.4"
rayon = "1.10"
anyhow = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
half = "2.4"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
