[package]
name = "ingestion-worker"
version = "0.1.0"
edition = "2021"
description = "LifeNavigator personalized-GraphRAG ingestion worker (Supabase → Gemini → Qdrant → Neo4j)"
license = "Proprietary"
publish = false

# Library exposes the modules to integration tests under tests/. The binary is
# the production entry point.
[lib]
name = "ingestion_worker"
path = "src/lib.rs"

[[bin]]
name = "ingestion-worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1"
once_cell = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
