[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-navigator-agents"
version = "0.1.0"
description = "Hierarchical multi-agent system with dual GraphRAG"
requires-python = ">=3.12,<4.0"

dependencies = [
    # Web framework - Latest secure versions
    "fastapi==0.121.1",
    "uvicorn[standard]==0.38.0",
    "httpx==0.28.1",
    "aiohttp==3.13.2",  # Latest - request smuggling and DoS fixes

    # Configuration
    "pydantic==2.12.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",

    # Database
    "asyncpg==0.30.0",
    "redis[hiredis]==7.0.1",  # Latest - multiple security fixes
    "aio-pika==9.4.3",
    "boto3==1.35.0",
    "psycopg[binary]==3.2.1",
    "pgvector==0.3.2",
    "qdrant-client==1.11.0",
    "neo4j==5.24.0",

    # ML/AI - Latest secure versions
    # Note: PyTorch installed separately with CUDA support
    # pip install torch==2.9.0+cu130 torchvision torchaudio --index-url https://download.pytorch.org/whl/cu130
    "transformers==4.57.1",
    "peft==0.17.1",
    "bitsandbytes==0.48.1",
    "datasets==4.3.0",
    "accelerate==1.11.0",
    "sentence-transformers==3.0.1",

    # Data processing - Latest secure versions
    "numpy==2.3.4",
    "pandas==2.3.3",

    # Monitoring & System
    "prometheus-client==0.20.0",
    "psutil==5.9.0",
    "nvidia-ml-py3==7.352.0",

    # Visualization
    "plotly==5.18.0",
    "kaleido==0.2.1",

    # Security - Latest
    "cryptography==43.0.1",
    "pyjwt==2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.0",  # Latest
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "black==25.9.0",  # Latest
    "ruff==0.6.4",
    "mypy==1.11.2",
]
ui = [
    "streamlit>=1.38.0",
]
gpu = [
    # GPU-specific dependencies (requires CUDA 13.0)
    # PyTorch is installed separately via setup script
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graphrag*", "models*", "messaging*", "utils*", "api*"]
exclude = ["tests*", "docs*", "examples*", "infra*", "scripts*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    "mcp-server/agents",
    "tests",
    "benchmark_.*\\.py",
    "test_.*\\.py",
]

[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
