[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "life-navigator-agents"
version = "0.1.0"
description = "Hierarchical multi-agent system with dual GraphRAG"
authors = ["Life Navigator Team"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# Web framework - Latest secure versions
fastapi = "0.121.1"
uvicorn = {extras = ["standard"], version = "0.38.0"}
httpx = "0.28.1"
aiohttp = "3.13.2"

# Configuration
pydantic = "2.12.4"
pydantic-settings = "2.7.1"
python-dotenv = "1.0.1"

# Database
asyncpg = "0.30.0"
redis = {extras = ["hiredis"], version = "7.0.1"}
aio-pika = "9.4.3"
boto3 = "1.35.0"
psycopg = {extras = ["binary"], version = "3.2.1"}
pgvector = "0.3.2"
qdrant-client = "1.11.0"
neo4j = "5.24.0"

# ML/AI - Latest secure versions
transformers = "4.57.1"
peft = "0.17.1"
bitsandbytes = "0.48.1"
datasets = "4.3.0"
accelerate = "1.11.0"
sentence-transformers = "3.0.1"

# Data processing
numpy = "2.3.4"
pandas = "2.3.3"

# Monitoring & System
prometheus-client = "0.20.0"
psutil = ">=6.1.0"
nvidia-ml-py3 = "7.352.0"

# Visualization
plotly = "5.18.0"
kaleido = "0.2.1"

# Security
cryptography = "43.0.1"
pyjwt = "2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<9"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"
black = "25.9.0"
ruff = ">=0.14.4,<0.15.0"
mypy = ">=1.18.2,<2.0.0"

[tool.poetry.group.ui]
optional = true

[tool.poetry.group.ui.dependencies]
streamlit = ">=1.38.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    "mcp-server/agents",
    "tests",
    "benchmark_.*\\.py",
    "test_.*\\.py",
]

