[tool.poetry]
name = "life-navigator-api"
version = "0.1.0"
description = "Life Navigator Main FastAPI Backend"
authors = ["Life Navigator Team"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
# Security-critical updates
fastapi = "^0.115.0"  # Updated to fix DoS vulnerabilities
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"  # Updated to fix SQL injection vulnerability
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}  # Updated to fix CRITICAL vulnerabilities
passlib = {version = ">=1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.18"  # Updated to fix DoS vulnerability
redis = "^5.0.1"
google-cloud-storage = "^2.14.0"
google-cloud-secret-manager = "^2.17.0"
google-cloud-logging = "^3.9.0"
neo4j = "^5.16.0"
rdflib = "^7.0.0"
anthropic = "^0.18.0"
bcrypt = ">=4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^25.9.0"
ruff = ">=0.14.4,<0.15.0"
mypy = "^1.8.0"

[tool.ruff]
line-length = 100
ignore = [
    "F403",  # star imports (from module import *) - to be fixed later
    "F405",  # names from star imports may be undefined - to be fixed later
    "E402",  # module level import not at top of file
    "E712",  # comparison to True should use 'is'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
