[tool.poetry]
name = "life-navigator-embeddings"
version = "0.1.0"
description = "Vector Embedding Generation Service"
authors = ["Life Navigator Team"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
sentence-transformers = "^2.3.0"
google-cloud-aiplatform = "^1.40.0"
neo4j = "^5.16.0"
torch = "^2.1.0"
transformers = "^4.36.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
ruff = ">=0.14.4,<0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
