[package]
name = "graphrag-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC framework
tonic = "0.11"
prost = "0.12"

# Database clients
neo4rs = "0.7"                    # Neo4j async client
qdrant-client = "=1.11.0"         # Pin to stable version compatible with stable Rust

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for GraphDB SPARQL
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"  # Maintained fork of dotenv

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Connection pooling
deadpool = "0.10"
async-trait = "0.1"

# URL parsing
url = "2.5"

# Embeddings (will use HTTP to Maverick or external service)
# For now, use reqwest for API calls

# SPARQL query building
spargebra = "0.2"  # SPARQL query parser/builder

# Performance
parking_lot = "0.12"
rayon = "1.10"

# Metrics and observability
prometheus = "0.14"  # Updated to fix protobuf vulnerability (RUSTSEC-2024-0437)
once_cell = "1.19"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
