[tool.poetry]
name = "life-navigator-kg-sync"
version = "0.1.0"
description = "GraphDB to Neo4j Knowledge Graph ETL Pipeline"
authors = ["Life Navigator Team"]

[tool.poetry.dependencies]
python = "^3.11"
neo4j = "^5.16.0"
rdflib = "^7.0.0"
pydantic = "^2.5.0"
google-cloud-pubsub = "^2.19.0"
google-cloud-logging = "^3.9.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.1.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
