[project]
name = "market-data"
version = "1.0.0"
description = "Market data feed pipeline for LifeNavigator risk-engine"
authors = [
    {name = "LifeNavigator Platform Team", email = "platform@lifenavigator.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.1",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "google-cloud-storage>=2.14.0",
    "google-cloud-sql-connector>=1.5.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "tenacity>=8.2.3",
    "apscheduler>=3.10.4",
    "yfinance>=0.2.35",
    "fredapi>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "respx>=0.20.2",
    "freezegun>=1.4.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "black>=24.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
