[package]
name = "life-navigator-training-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "life_navigator_rs"
crate-type = ["cdylib"]  # For Python extension

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
pythonize = "0.20"  # For Python/Rust type conversion

# Compression
zstd = "0.13"

# Parallel processing (NO GIL!)
rayon = "1.10"

# Fast tokenization
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }

# Fast hashing
ahash = "0.8"

# Memory-mapped files
memmap2 = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Database clients
neo4rs = "0.7"  # Neo4j async client
qdrant-client = "1.7"  # Official Qdrant client

# Connection pooling
deadpool = "0.10"
async-trait = "0.1"

# HTTP client for database APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# URL parsing
url = "2.5"

# Elite-level production features
parking_lot = "0.12"  # High-performance RwLock for cache and metrics
rand = "0.8"          # Random number generation for jitter in retry logic

# Week 4: Advanced graph algorithm optimizations
crossbeam = "0.8"     # Lock-free data structures for parallel algorithms
sprs = "0.11"         # Sparse matrix library for optimized PageRank
num-traits = "0.2"    # Numeric traits for generic algorithms
ordered-float = "4.0" # Total ordering for floats in collections

# SIMD optimizations (Elite Performance!)
wide = "0.7"          # Portable SIMD abstractions (SSE/AVX2/NEON) - Works on stable Rust!

[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary
strip = true         # Strip symbols

[profile.release.build-override]
opt-level = 3
