[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "life-navigator-rs"
version = "0.1.0"
description = "High-performance Rust modules for Life Navigator data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["rust", "data-processing", "performance", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/yourusername/life-navigator-agents"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "life_navigator_rs"
